; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_ctr.c_frontend_ctr_get_name.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_ctr.c_frontend_ctr_get_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"Old 3DS\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"Old 3DS XL\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"New 3DS\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"Old 2DS\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"New 3DS XL\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"New 2DS XL\00", align 1
@.str.6 = private unnamed_addr constant [15 x i8] c"Unknown Device\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @frontend_ctr_get_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frontend_ctr_get_name(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 255, i32* %5, align 4
  %6 = call i32 @CFGU_GetSystemModel(i32* %5)
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %32 [
    i32 0, label %8
    i32 1, label %12
    i32 2, label %16
    i32 3, label %20
    i32 4, label %24
    i32 5, label %28
  ]

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @strlcpy(i8* %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i64 %10)
  br label %36

12:                                               ; preds = %2
  %13 = load i8*, i8** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @strlcpy(i8* %13, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i64 %14)
  br label %36

16:                                               ; preds = %2
  %17 = load i8*, i8** %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @strlcpy(i8* %17, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i64 %18)
  br label %36

20:                                               ; preds = %2
  %21 = load i8*, i8** %3, align 8
  %22 = load i64, i64* %4, align 8
  %23 = call i32 @strlcpy(i8* %21, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i64 %22)
  br label %36

24:                                               ; preds = %2
  %25 = load i8*, i8** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @strlcpy(i8* %25, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i64 %26)
  br label %36

28:                                               ; preds = %2
  %29 = load i8*, i8** %3, align 8
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @strlcpy(i8* %29, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0), i64 %30)
  br label %36

32:                                               ; preds = %2
  %33 = load i8*, i8** %3, align 8
  %34 = load i64, i64* %4, align 8
  %35 = call i32 @strlcpy(i8* %33, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.6, i64 0, i64 0), i64 %34)
  br label %36

36:                                               ; preds = %32, %28, %24, %20, %16, %12, %8
  ret void
}

declare dso_local i32 @CFGU_GetSystemModel(i32*) #1

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
